--- a/salemjwl/src/App.css
+++ b/salemjwl/src/App.css
@@ -35,3 +35,7 @@
 .slide-out {
   animation: slideLeftToRight 1s ease-in-out forwards;
 }
+.bgcol {
+  /* background-color: #ffbb03; */
+  background-color: green;
+}
